Add repo settings and remove highlights for Liberty
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I6cb6f5cf8103924c20dd57d26ae690f35057e82c

--- a/deliverables/liberty/aodh.yaml
+++ b/deliverables/liberty/aodh.yaml
@@ -25,3 +25,5 @@ releases:
     projects:
       - repo: openstack/aodh
         hash: a5de051bcb1e994497d57c690677bb2da2924cb1
+repository-settings:
+  openstack/aodh: {}
