--- a/deliverables/liberty/automaton.yaml
+++ b/deliverables/liberty/automaton.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/automaton
         hash: e5d9c91e19fba9115f6a7d3d3f9e7023849bdb74
+repository-settings:
+  openstack/automaton: {}
