--- a/deliverables/liberty/barbican.yaml
+++ b/deliverables/liberty/barbican.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/barbican
         hash: 7a324b4d03e917f1c990282b39cacb9d543383c9
+repository-settings:
+  openstack/barbican: {}
