--- a/deliverables/liberty/ceilometer.yaml
+++ b/deliverables/liberty/ceilometer.yaml
@@ -29,3 +29,5 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: 09afee9a8fd665097f912defc844bb80e54fc23d
+repository-settings:
+  openstack/ceilometer: {}
