--- a/deliverables/liberty/ceilometermiddleware.yaml
+++ b/deliverables/liberty/ceilometermiddleware.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/ceilometermiddleware
         hash: 7005d98f47be809243d627cee7ca594390cddec2
+repository-settings:
+  openstack/ceilometermiddleware: {}
