--- a/deliverables/liberty/cinder.yaml
+++ b/deliverables/liberty/cinder.yaml
@@ -21,3 +21,5 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 4295ff0a64f781c3546f6c6e0816dbb8100133cb
+repository-settings:
+  openstack/cinder: {}
