--- a/deliverables/liberty/congress.yaml
+++ b/deliverables/liberty/congress.yaml
@@ -9,3 +9,5 @@ releases:
     projects:
       - repo: openstack/congress
         hash: a8f79bd715bffc5803fe993f28989367b4bf7db6
+repository-settings:
+  openstack/congress: {}
