--- a/deliverables/liberty/debtcollector.yaml
+++ b/deliverables/liberty/debtcollector.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/debtcollector
         hash: ceb020b235ff91b6a1d89477de2dfabbcf0bba26
+repository-settings:
+  openstack/debtcollector: {}
