--- a/deliverables/liberty/designate-dashboard.yaml
+++ b/deliverables/liberty/designate-dashboard.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/designate-dashboard
         hash: f4f3dd8e20767706573fb9f98d43cd7473f73a81
+repository-settings:
+  openstack/designate-dashboard: {}
