--- a/deliverables/liberty/designate.yaml
+++ b/deliverables/liberty/designate.yaml
@@ -22,3 +22,6 @@ releases:
         hash: 35e1b35b17461a960ef22b6510f8ba2f6389b01a
       - repo: openstack/designate-dashboard
         hash: de0eb1ab8c02e4470b87d0c449377ad3653cdb50
+repository-settings:
+  openstack/designate: {}
+  openstack/designate-dashboard: {}
