--- a/deliverables/liberty/futurist.yaml
+++ b/deliverables/liberty/futurist.yaml
@@ -32,3 +32,5 @@ releases:
     projects:
       - repo: openstack/futurist
         hash: 27772aee33c33f78d987b9c05579ebc2b4d2348c
+repository-settings:
+  openstack/futurist: {}
