--- a/deliverables/liberty/glance.yaml
+++ b/deliverables/liberty/glance.yaml
@@ -17,5 +17,5 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 9496b9dd83a3eb9605f93e648498d837403aab44
-    highlights: >
-        - Contains fix for CVE-2015-5162.
+repository-settings:
+  openstack/glance: {}
