--- a/deliverables/liberty/heat.yaml
+++ b/deliverables/liberty/heat.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 75d5895bf58b81806797f4886dcd35b368839c83
+repository-settings:
+  openstack/heat: {}
