--- a/deliverables/liberty/horizon.yaml
+++ b/deliverables/liberty/horizon.yaml
@@ -17,3 +17,5 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 8bd58779dc3d3475722bf96ab157370dfb996914
+repository-settings:
+  openstack/horizon: {}
