--- a/deliverables/liberty/instack-undercloud.yaml
+++ b/deliverables/liberty/instack-undercloud.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/instack-undercloud
         hash: 9937c682731ce46c8df0bbaf999a75f649db30d0
+repository-settings:
+  openstack/instack-undercloud: {}
