--- a/deliverables/liberty/ironic-inspector.yaml
+++ b/deliverables/liberty/ironic-inspector.yaml
@@ -49,3 +49,5 @@ releases:
     projects:
       - repo: openstack/ironic-inspector
         hash: d821c1dfe20a0c71a24087eba0f2cc2c6c038d77
+repository-settings:
+  openstack/ironic-inspector: {}
