--- a/deliverables/liberty/ironic-python-agent.yaml
+++ b/deliverables/liberty/ironic-python-agent.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/ironic-python-agent
         hash: 855edf67d02a313ab2823c2df5436937db51bd76
+repository-settings:
+  openstack/ironic-python-agent: {}
