--- a/deliverables/liberty/ironic.yaml
+++ b/deliverables/liberty/ironic.yaml
@@ -37,3 +37,5 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: f5a3ff1dfcde068769f9a2a477ba6a9edaf69c77
+repository-settings:
+  openstack/ironic: {}
