--- a/deliverables/liberty/manila-ui.yaml
+++ b/deliverables/liberty/manila-ui.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: 973223f87335e522b46ddce9ff89981364efde0b
+repository-settings:
+  openstack/manila-ui: {}
