--- a/deliverables/liberty/manila.yaml
+++ b/deliverables/liberty/manila.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 0f1b68231ad33c3e300e03adf0f1801db9afab97
+repository-settings:
+  openstack/manila: {}
