--- a/deliverables/liberty/mistral.yaml
+++ b/deliverables/liberty/mistral.yaml
@@ -13,3 +13,5 @@ releases:
     projects:
       - repo: openstack/mistral
         hash: 0e67e8474ff0fb870bceb074f3e5715501fa720b
+repository-settings:
+  openstack/mistral: {}
