--- a/deliverables/liberty/mox3.yaml
+++ b/deliverables/liberty/mox3.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/mox3
         hash: 60dd893a8095f9d7957bf6635dc1620a7908d86b
+repository-settings:
+  openstack/mox3: {}
