--- a/deliverables/liberty/murano-agent.yaml
+++ b/deliverables/liberty/murano-agent.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/murano-agent
         hash: 68acd640efa5dffb3b1f4436e87ebda1b812394d
+repository-settings:
+  openstack/murano-agent: {}
