--- a/deliverables/liberty/murano-dashboard.yaml
+++ b/deliverables/liberty/murano-dashboard.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 0f3745415ab4f083cbf069a9cb574168e499a386
+repository-settings:
+  openstack/murano-dashboard: {}
