--- a/deliverables/liberty/murano.yaml
+++ b/deliverables/liberty/murano.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/murano
         hash: 355513fe2e8c929f783de1109bee76c340cedced
+repository-settings:
+  openstack/murano: {}
