--- a/deliverables/liberty/octavia.yaml
+++ b/deliverables/liberty/octavia.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/octavia
         hash: b3776a4110c6ac35358ca03ffee8b2defd85cea3
+repository-settings:
+  openstack/octavia: {}
