--- a/deliverables/liberty/openstack-ansible.yaml
+++ b/deliverables/liberty/openstack-ansible.yaml
@@ -42,3 +42,5 @@ releases:
     projects:
       - repo: openstack/openstack-ansible
         hash: 0306a5f1e7c41b4476341d3de058de25389ec725
+repository-settings:
+  openstack/openstack-ansible: {}
