--- a/deliverables/liberty/os-client-config.yaml
+++ b/deliverables/liberty/os-client-config.yaml
@@ -80,3 +80,5 @@ releases:
     projects:
       - repo: openstack/os-client-config
         hash: 512d00e208190cd3d38ff275567633ff1dcdcf20
+repository-settings:
+  openstack/os-client-config: {}
