--- a/deliverables/liberty/oslo.cache.yaml
+++ b/deliverables/liberty/oslo.cache.yaml
@@ -40,3 +40,5 @@ releases:
     projects:
       - repo: openstack/oslo.cache
         hash: 24f10af201da9264ba3db6eb2e8fcf583008d6b6
+repository-settings:
+  openstack/oslo.cache: {}
