--- a/deliverables/liberty/oslo.concurrency.yaml
+++ b/deliverables/liberty/oslo.concurrency.yaml
@@ -44,3 +44,5 @@ releases:
     projects:
       - repo: openstack/oslo.concurrency
         hash: d65d931da8490576f0abf30f124ca3a032b481c7
+repository-settings:
+  openstack/oslo.concurrency: {}
