--- a/deliverables/liberty/oslo.config.yaml
+++ b/deliverables/liberty/oslo.config.yaml
@@ -52,3 +52,5 @@ releases:
     projects:
       - repo: openstack/oslo.config
         hash: 7a9f4e7d670d5e74af85fd28edd898babc9d230b
+repository-settings:
+  openstack/oslo.config: {}
