--- a/deliverables/liberty/oslo.context.yaml
+++ b/deliverables/liberty/oslo.context.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/oslo.context
         hash: 73c91b85c65f9ea88e270915f60f30c3453935f2
+repository-settings:
+  openstack/oslo.context: {}
