--- a/deliverables/liberty/oslo.db.yaml
+++ b/deliverables/liberty/oslo.db.yaml
@@ -56,3 +56,5 @@ releases:
     projects:
       - repo: openstack/oslo.db
         hash: 7991f129b6cb376689bf68330914b3d2d2a9dfaa
+repository-settings:
+  openstack/oslo.db: {}
