--- a/deliverables/liberty/oslo.i18n.yaml
+++ b/deliverables/liberty/oslo.i18n.yaml
@@ -40,3 +40,5 @@ releases:
     projects:
       - repo: openstack/oslo.i18n
         hash: 4417d33a9fa6f3c414d72d162a4d0d3715ffe256
+repository-settings:
+  openstack/oslo.i18n: {}
