--- a/deliverables/liberty/oslo.log.yaml
+++ b/deliverables/liberty/oslo.log.yaml
@@ -44,3 +44,5 @@ releases:
     projects:
       - repo: openstack/oslo.log
         hash: f718919c459be88d24fbf96a97856835c611b7a8
+repository-settings:
+  openstack/oslo.log: {}
