--- a/deliverables/liberty/oslo.messaging.yaml
+++ b/deliverables/liberty/oslo.messaging.yaml
@@ -72,3 +72,5 @@ releases:
     projects:
       - repo: openstack/oslo.messaging
         hash: e9a1492b7293d1378bf74595c0f7b933bad70763
+repository-settings:
+  openstack/oslo.messaging: {}
