--- a/deliverables/liberty/oslo.middleware.yaml
+++ b/deliverables/liberty/oslo.middleware.yaml
@@ -52,3 +52,5 @@ releases:
     projects:
       - repo: openstack/oslo.middleware
         hash: b73aa5c3abcea74716e236e8fd41475a5dc8dbdd
+repository-settings:
+  openstack/oslo.middleware: {}
