--- a/deliverables/liberty/oslo.policy.yaml
+++ b/deliverables/liberty/oslo.policy.yaml
@@ -32,3 +32,5 @@ releases:
     projects:
       - repo: openstack/oslo.policy
         hash: 31e39faa2ebd93a1a5e9173c2f376570afc02d43
+repository-settings:
+  openstack/oslo.policy: {}
