--- a/deliverables/liberty/oslo.reports.yaml
+++ b/deliverables/liberty/oslo.reports.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/oslo.reports
         hash: ce8d48da5e62edb51d9dd45be407f3d34deab1ae
+repository-settings:
+  openstack/oslo.reports: {}
