--- a/deliverables/liberty/oslo.rootwrap.yaml
+++ b/deliverables/liberty/oslo.rootwrap.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/oslo.rootwrap
         hash: e5f9a393ced38e2bccfd5c626cebcb036192be71
+repository-settings:
+  openstack/oslo.rootwrap: {}
