--- a/deliverables/liberty/oslo.serialization.yaml
+++ b/deliverables/liberty/oslo.serialization.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/oslo.serialization
         hash: 03f34312d437a1419ebd1f90da6b9a96aa7bcb36
+repository-settings:
+  openstack/oslo.serialization: {}
