--- a/deliverables/liberty/oslo.service.yaml
+++ b/deliverables/liberty/oslo.service.yaml
@@ -45,3 +45,5 @@ releases:
     projects:
       - repo: openstack/oslo.service
         hash: 8b6e2f64e8f82ec736a4c5b792d448ad7faf051f
+repository-settings:
+  openstack/oslo.service: {}
