--- a/deliverables/liberty/oslo.utils.yaml
+++ b/deliverables/liberty/oslo.utils.yaml
@@ -48,3 +48,5 @@ releases:
     projects:
       - repo: openstack/oslo.utils
         hash: 5f6e724eb1bcaa9ab46f7a85a9b5604878e0f2f9
+repository-settings:
+  openstack/oslo.utils: {}
