--- a/deliverables/liberty/oslo.versionedobjects.yaml
+++ b/deliverables/liberty/oslo.versionedobjects.yaml
@@ -48,3 +48,5 @@ releases:
     projects:
       - repo: openstack/oslo.versionedobjects
         hash: ccbc6429472a697d69bbd844551ca8649ba5c313
+repository-settings:
+  openstack/oslo.versionedobjects: {}
