--- a/deliverables/liberty/oslo.vmware.yaml
+++ b/deliverables/liberty/oslo.vmware.yaml
@@ -36,3 +36,5 @@ releases:
     projects:
       - repo: openstack/oslo.vmware
         hash: f68b07d64865ed9b6da588fd3a5261aff7843d8b
+repository-settings:
+  openstack/oslo.vmware: {}
