--- a/deliverables/liberty/oslosphinx.yaml
+++ b/deliverables/liberty/oslosphinx.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/oslosphinx
         hash: 3f9bccefc9f2bf5f2fbff1eb6cf6d35db39fa3fd
+repository-settings:
+  openstack/oslosphinx: {}
