--- a/deliverables/liberty/oslotest.yaml
+++ b/deliverables/liberty/oslotest.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/oslotest
         hash: 266bccb7b6ddcbff6767484a71a0a7fe3c0072e6
+repository-settings:
+  openstack/oslotest: {}
