--- a/deliverables/liberty/pycadf.yaml
+++ b/deliverables/liberty/pycadf.yaml
@@ -16,5 +16,7 @@ releases:
     projects:
       - repo: openstack/pycadf
         hash: c5dc0d9577e455f149edb5331a6e493def6928d5
-        highlights: >
+        highlights: |
           This includes Ceilometer auditing and Barbican definitions
+repository-settings:
+  openstack/pycadf: {}
