--- a/deliverables/liberty/python-barbicanclient.yaml
+++ b/deliverables/liberty/python-barbicanclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: a5f7531a0f37542be70d0cfbd0fd7f86a38b0539
+repository-settings:
+  openstack/python-barbicanclient: {}
