--- a/deliverables/liberty/python-cliff.yaml
+++ b/deliverables/liberty/python-cliff.yaml
@@ -14,3 +14,5 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: a2e52e2dac049795597f0cfb66c745a57b04ebda
+repository-settings:
+  openstack/cliff: {}
