--- a/deliverables/liberty/python-congressclient.yaml
+++ b/deliverables/liberty/python-congressclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-congressclient
         hash: 087472112297fab6769a936a6d7abd1eb40b022e
+repository-settings:
+  openstack/python-congressclient: {}
