--- a/deliverables/liberty/python-designateclient.yaml
+++ b/deliverables/liberty/python-designateclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-designateclient
         hash: b97ae05612522180cc6f64485212811329da9645
+repository-settings:
+  openstack/python-designateclient: {}
