--- a/deliverables/liberty/python-glanceclient.yaml
+++ b/deliverables/liberty/python-glanceclient.yaml
@@ -29,3 +29,5 @@ releases:
     projects:
       - repo: openstack/python-glanceclient
         hash: 1d88844bdc681cbe71dc06f55f08857acbe7bb9e
+repository-settings:
+  openstack/python-glanceclient: {}
