--- a/deliverables/liberty/python-heatclient.yaml
+++ b/deliverables/liberty/python-heatclient.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 98b45c35913ab96f161ef695ff99f69a968130b5
+repository-settings:
+  openstack/python-heatclient: {}
