--- a/deliverables/liberty/python-ironic-inspector-client.yaml
+++ b/deliverables/liberty/python-ironic-inspector-client.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-ironic-inspector-client
         hash: f4cb45ffdd4fe26f88326bde53ffbe93d827c8b6
+repository-settings:
+  openstack/python-ironic-inspector-client: {}
