--- a/deliverables/liberty/python-ironicclient.yaml
+++ b/deliverables/liberty/python-ironicclient.yaml
@@ -25,3 +25,5 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: ae2c0995adbc71b6eed03fd11087b93acf01446a
+repository-settings:
+  openstack/python-ironicclient: {}
