--- a/deliverables/liberty/python-magnumclient.yaml
+++ b/deliverables/liberty/python-magnumclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-magnumclient
         hash: 29b0aa543ca33d3236e77e18d56aa5f11c254682
+repository-settings:
+  openstack/python-magnumclient: {}
