--- a/deliverables/liberty/python-manilaclient.yaml
+++ b/deliverables/liberty/python-manilaclient.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/python-manilaclient
         hash: 0bbd2144f701df3408b1435b16611c2ba3c22221
+repository-settings:
+  openstack/python-manilaclient: {}
