--- a/deliverables/liberty/python-mistralclient.yaml
+++ b/deliverables/liberty/python-mistralclient.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/python-mistralclient
         hash: 48e2780ee0148efc186c8972ca22e572fa2433c5
+repository-settings:
+  openstack/python-mistralclient: {}
