--- a/deliverables/liberty/python-mox3.yaml
+++ b/deliverables/liberty/python-mox3.yaml
@@ -6,3 +6,5 @@ releases:
     projects:
       - repo: openstack/mox3
         hash: c919d92bb946d5cca2ac54f267c73ecb363d5b13
+repository-settings:
+  openstack/mox3: {}
