--- a/deliverables/liberty/python-openstackclient.yaml
+++ b/deliverables/liberty/python-openstackclient.yaml
@@ -40,3 +40,5 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: 4f52b5e8f19561a4c49089931876701800150dab
+repository-settings:
+  openstack/python-openstackclient: {}
