--- a/deliverables/liberty/python-stevedore.yaml
+++ b/deliverables/liberty/python-stevedore.yaml
@@ -10,3 +10,5 @@ releases:
     projects:
       - repo: openstack/stevedore
         hash: 6ddec6e4c852e454cc84a87c3fafc09292346d24
+repository-settings:
+  openstack/stevedore: {}
