--- a/deliverables/liberty/python-swiftclient.yaml
+++ b/deliverables/liberty/python-swiftclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: 7cd2a01cda4ac592dee465d4acf8a0b246354328
+repository-settings:
+  openstack/python-swiftclient: {}
