--- a/deliverables/liberty/python-tooz.yaml
+++ b/deliverables/liberty/python-tooz.yaml
@@ -10,3 +10,5 @@ releases:
     projects:
       - repo: openstack/tooz
         hash: e4bbade4efce0e1b6afe4dd5b96410516537c142
+repository-settings:
+  openstack/tooz: {}
