--- a/deliverables/liberty/python-tripleoclient.yaml
+++ b/deliverables/liberty/python-tripleoclient.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/python-tripleoclient
         hash: 646028f82eeaec9111c6a50ca2e57d3b14f811ba
+repository-settings:
+  openstack/python-tripleoclient: {}
