--- a/deliverables/liberty/python-zaqarclient.yaml
+++ b/deliverables/liberty/python-zaqarclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-zaqarclient
         hash: c1a0ea98b6f0aad5764ce197172b41d3efc1e485
+repository-settings:
+  openstack/python-zaqarclient: {}
