--- a/deliverables/liberty/sahara.yaml
+++ b/deliverables/liberty/sahara.yaml
@@ -37,3 +37,7 @@ releases:
         hash: 6e7d61566211aa0342109d50b34a8fe85b6cb9db
       - repo: openstack/sahara-image-elements
         hash: f79c2c61ae57f3716873c82ab9967d0bb85bb685
+repository-settings:
+  openstack/sahara: {}
+  openstack/sahara-extra: {}
+  openstack/sahara-image-elements: {}
