--- a/deliverables/liberty/searchlight.yaml
+++ b/deliverables/liberty/searchlight.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: 75334b7bdb10f0100f2eac41a73367d50a7a06a9
+repository-settings:
+  openstack/searchlight: {}
