--- a/deliverables/liberty/stevedore.yaml
+++ b/deliverables/liberty/stevedore.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/stevedore
         hash: d229c846c6bdb763e43858edd999f3360caf7500
+repository-settings:
+  openstack/stevedore: {}
