--- a/deliverables/liberty/swift.yaml
+++ b/deliverables/liberty/swift.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/swift
         hash: 47eb6a37f86f29c355297b556c2ff898c98da9b2
+repository-settings:
+  openstack/swift: {}
