--- a/deliverables/liberty/taskflow.yaml
+++ b/deliverables/liberty/taskflow.yaml
@@ -56,3 +56,5 @@ releases:
     projects:
       - repo: openstack/taskflow
         hash: 52bd5e89fdddec49907a45e83a7a4b1abd1d1291
+repository-settings:
+  openstack/taskflow: {}
