--- a/deliverables/liberty/tooz.yaml
+++ b/deliverables/liberty/tooz.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/tooz
         hash: f44bd9831248e1093eb40867689437b41e0ba715
+repository-settings:
+  openstack/tooz: {}
