--- a/deliverables/liberty/tripleo-heat-templates.yaml
+++ b/deliverables/liberty/tripleo-heat-templates.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/tripleo-heat-templates
         hash: 11c00004416cc6c4e7a49d1542ee180fde03fd2c
+repository-settings:
+  openstack/tripleo-heat-templates: {}
