--- a/deliverables/liberty/trove.yaml
+++ b/deliverables/liberty/trove.yaml
@@ -12,9 +12,9 @@ releases:
     projects:
       - repo: openstack/trove
         hash: 85e26361aa7b547ecf31f4a23d214e0c9058709c
-    highlights: >
-        Fixes bug with guest configuration injection (Bug 1609915)
   - version: 4.0.2
     projects:
       - repo: openstack/trove
         hash: 8b0dda47edc6e8c4f18fcac7305910731d7357ca
+repository-settings:
+  openstack/trove: {}
