--- a/deliverables/liberty/vmware-nsx.yaml
+++ b/deliverables/liberty/vmware-nsx.yaml
@@ -10,3 +10,5 @@ releases:
     projects:
       - repo: openstack/vmware-nsx
         hash: 94117909b9558131aafd12d00d3e720e829d7998
+repository-settings:
+  openstack/vmware-nsx: {}
