--- a/deliverables/liberty/zaqar.yaml
+++ b/deliverables/liberty/zaqar.yaml
@@ -13,3 +13,5 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: bc70c220cd09d1e8ec5567b020889ad8c85bde14
+repository-settings:
+  openstack/zaqar: {}
