--- a/deliverables/liberty/keystoneauth.yaml
+++ b/deliverables/liberty/keystoneauth.yaml
@@ -24,17 +24,13 @@ releases:
     projects:
       - repo: openstack/keystoneauth
         hash: 0d9fcb045b95116c5c845dc4cd27c743ea6987f6
-    highlights: >
-        Blocks requests 2.8.0 and 2.9.0.
   - version: 1.1.2
     projects:
       - repo: openstack/keystoneauth
         hash: 877ddce29191c2bfdade1d298e7b86c87d945025
-    highlights: >
-        - Mark password/secret options as secret
   - version: 1.1.3
     projects:
       - repo: openstack/keystoneauth
         hash: aa122e73ccbd83be8eee0f7a116b1bef2bac2545
-    highlights: >
-        - Deprecate user-name instead of username (bug 1498247)
+repository-settings:
+  openstack/keystoneauth: {}
