--- a/deliverables/liberty/neutron.yaml
+++ b/deliverables/liberty/neutron.yaml
@@ -15,7 +15,6 @@ releases:
         hash: ac80967b4bfbf885dc5a27de9ff69d1a61034f28
       - repo: openstack/neutron-vpnaas
         hash: 1ab399faa6a907bb67e981b728dd06369f0a66d8
-
   - version: 7.0.1
     projects:
       - repo: openstack/neutron
@@ -26,7 +25,6 @@ releases:
         hash: 2adbc943ac497445eee06a645645264e3d9ba8b4
       - repo: openstack/neutron-vpnaas
         hash: f01e6a4662580892aacb632e4b50d5ccb7929e64
-
   - version: 7.0.2
     projects:
       - repo: openstack/neutron
@@ -37,7 +35,6 @@ releases:
         hash: eb7590c78a9185112f6600aa4c9a2d45fefa85fa
       - repo: openstack/neutron-vpnaas
         hash: 427ba7e748ad19e230a6d04b6888331cc49ef868
-
   - version: 7.0.3
     projects:
       - repo: openstack/neutron
@@ -92,10 +89,8 @@ releases:
         hash: d42ad18bbc36f44c190f7c5e70b324cfabfa28d4
       - repo: openstack/neutron-vpnaas
         hash: d18778b52f4a36066e7547ab9f8909ef84969eef
-    highlights: |-
-      * Introduced new ha_keepalived_state_change_server_threads option to
-        control the number of threads used by neutron-keepalived-state-change.
-      * Don't use exponential back-off for report_state.
-      * Don't flush OpenFlow rules on external Open vSwitch controller
-        disconnect.
-      * LBaaS: fixed 'lbaasv2' service plugin alias definition.
+repository-settings:
+  openstack/neutron: {}
+  openstack/neutron-fwaas: {}
+  openstack/neutron-lbaas: {}
+  openstack/neutron-vpnaas: {}
