--- a/deliverables/liberty/os-brick.yaml
+++ b/deliverables/liberty/os-brick.yaml
@@ -12,29 +12,27 @@ releases:
     projects:
       - repo: openstack/os-brick
         hash: d191180bbf0f2cf61a7e1da88467ebb7a2a388a5
-        highlights: >
-         Adds HGST, RBD, ScaleIO connectors.
+        highlights: |
+          Adds HGST, RBD, ScaleIO connectors.
   - version: 0.3.1
     projects:
       - repo: openstack/os-brick
         hash: 11355ac5836a569c7a6f550f3960b60d7798842c
-        highlights: >
-         PBR changelog generator, and FC device path removal fixes.
+        highlights: |
+          PBR changelog generator, and FC device path removal fixes.
   - version: 0.3.2
     projects:
       - repo: openstack/os-brick
         hash: 1a7fe6c8148701d8dd2d477e2ba2f7d0e55b4a8f
-        highlights: >
-         PBR changelog generator, and FC device path removal fixes.
+        highlights: |
+          PBR changelog generator, and FC device path removal fixes.
   - version: 0.4.0
     projects:
       - repo: openstack/os-brick
         hash: 891cf03109b3750ec05fb9b53cb48584a16114ae
-    highlights: >
-        rootwrap filter, dependency updates and bug fixes.
   - version: 0.5.0
     projects:
       - repo: openstack/os-brick
         hash: 5ac54d4e0c89daba1be80702ee4060a538c08754
-    highlights: >
-        Log message fixes that prevent messages from being displayed at all.
+repository-settings:
+  openstack/os-brick: {}
