--- a/deliverables/liberty/python-saharaclient.yaml
+++ b/deliverables/liberty/python-saharaclient.yaml
@@ -32,3 +32,5 @@ releases:
     projects:
       - repo: openstack/python-saharaclient
         hash: 6d50185c2ab3a37787d151b49b972351ea3719f3
+repository-settings:
+  openstack/python-saharaclient: {}
