--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -120,5 +120,9 @@ releases:
       - hash: 93f717417b98a3527f922c11abb9f351068ebdfe
         repo: openstack/openstackdocstheme
     version: 1.18.1
+  - projects:
+      - hash: 45bf02a7a374acb9ad8d87efecd5235751b54aeb
+        repo: openstack/openstackdocstheme
+    version: 1.19.0
 repository-settings:
   openstack/openstackdocstheme: {}
